MGMT-3347 Adapting the code to the new generic monitored operators API
